修改代码格式

--- a/CLR via C#/Ⅲ-基本类型/14-字符、字符串和文本处理.md
+++ b/CLR via C#/Ⅲ-基本类型/14-字符、字符串和文本处理.md
@@ -29,25 +29,18 @@ var upper2 = name.ToUpper();
 
 #### 类型转换
 
-* 转型（强制类型转换）。
+```C#
+// 转型（强制类型转换）
+var a = (Char)65;
 
-  * ```c#
-    var a = (Char)65;
-    ```
+// 使用 `Convert` 类型
+var a = Convert.ToInt32("65");
 
-* 使用 `Convert` 类型。
+// 使用 `IConvertible` 接口。（效率最差，需要装箱）
+var a = ((IConvertible)65).ToInt32(null);
+```
 
-  * ```C#
-    var a = Convert.ToInt32("65");
-    ```
 
-* 使用 `IConvertible` 接口。（效率最差，需要装箱）
-
-  * ```c#
-    var a = ((IConvertible)65).ToInt32(null);
-    ```
-
-    
 
 ---
 
