--- a/CLR via C#/Ⅲ-基本类型/14-字符、字符串和文本处理.md
+++ b/CLR via C#/Ⅲ-基本类型/14-字符、字符串和文本处理.md
@@ -85,6 +85,108 @@ String str = "Hello" + Environment.NewLine + "World!";
 
 #### 字符串池
 
+> 编译源码时，编译器必须处理每个字面值_(literal)_ 字符串，并在托管堆的元数据中加入，为了避免生成的文件无谓的增大。
+>
+> 编译器只在模块的元数据中写入一次，引用该字符串的所有代码都被修改成引用元数据中的同一个字符串。
+
+#### 高效率构造字符串
+
+###### 构造 `StringBuilder` 对象
+
+* 最大容量
+  * 默认**Int32.MaxValue**，一般不用改。除非需要指定较小的最大容量以确保永远不会创建超出特定长度的字符串。
+* 容量
+  * 默认**16**。追加字符时，如果超过了设定的容量，会自动倍增容量字段。使用心得，并将字符复制到新的数组中。原始数组垃圾回收。为避免自动扩容损害性能，就要设置一个合适的处理容量。
+* 字符数组
+  * 可传递一个 `String` 来初始化数组，不传则 `Length` 属性为**0**。
+
+#### 获取对象的字符串表示
+
+> `System.Object` 定义了一个**public**、**virtual**、**无参**的 `ToString()` 方法，所以在任何类型的实例上都能调用该方法。
+>
+> 在语义上，`ToString()` 返回代表对象当前值的字符串，该字符串应根据调用线程当前的语言文化进行格式化。
+
+###### 指定具体的格式和语言文化
+
+* 为了使调用者能选择格式和语言文化，类型应该实现 `System.IFormattable` 接口。
+
+  ```c#
+  // format：告诉方法应该如何格式化对象。
+  // formatProvider：提供具体的语言文化信息。（默认使用与调用线程关联的语言文化信息进行格式化）
+  public interface IFormattable {
+      String ToString(String format, IFormatProvider formatProvider);
+  }
+  ```
+
+###### 将多个对象格式化成一个字符串
+
+>`String.Format()` 方法会调用每个对象(参数)的 `ToString()` 方法来获取对象的字符串表示。返回的字符串一次连接到一起，并返回最终的完整字符串。
+>
+>这意味着，所有对象都要使用它们的常规格式和调用线程的语言文化信息来格式化。
+
+###### 解析字符串来获取对象
+
+> 所有数值类型都提供了至少一个 `Parse()` 方法。
+
+```c#
+// 允许Parse跳过前导的空白字符
+Int32 x = Int32.Parse(" 123", NumberStyles.AllowLeadingWhite, null);
+```
+
+* `DateTime` 类型的 `Parse()` 方法：
+
+  `DateTime` 类型的 `Parse()` 方法过于宽松，有时候会解析不含日期和时间的字符串。
+
+  鉴于此，`DateTime` 类型还提供了 `ParseExact()` 方法，他接受一个 `picture` 格式字符串，能准确描述应该如何格式化日期/时间字符串，以及如何对它进行解析。
+
+#### 编码：字符和字节的相互转换
+
+> 在CLR中，所有的字符都表示成**16位 `Uncode` 码值**，所有的字符串都由它们构成。
+>
+> `Encoding.Default` 中的 `Default` 来源是：`控制面板` - `区域和语言选项` 中，通过 `非Unicode程序中所使用的当前语言` 的选项来制定的。
+
+* 常用编码
+  * UTF-16
+  * UTF-8
+* 不常用编码
+  * UTF-32
+  * UTF-7
+  * ASCⅡ
+
+#### 安全字符串
+
+>`String` 对象在内存中包含了一个字符数组。如果允许执行不安全或者非托管的代码，这些代码就可以扫描进程的地址空间，找到包含敏感数据的字符串，并以非授权的方式加以利用。即使 `String()` 对象只用一小段时间就进行垃圾回收，CLR也可能无法立即重用 `String` 对象的内存，致使 `String` 的字符长时间保留在进程的内存中（尤其时假如 `String` 对象是较老的一代），造成机密数据泄露。此外，由于字符串不可变_(immutable)_，所以当你处理它们时，旧的副本会逗留在内存中，最终造成多个版本的字符串散步在整个内存空间中。
+
+> 为了保护敏感数据，Microsoft 在 `FCL` 中增添了一个更安全的字符串类，即 `System.Security.SecureString`。构造 `SecureString` 对象时，会在内部分配一个非托管内存块，其中包含一个**字符数组**。
+
+```C#
+SecureString secret = new ScrureString();
+secret.AppendChar();
+secret.InsertAt();
+secret.RemoveAt();
+secret.SetAt();
+```
+
+
+
+---
+
+
+
+### 内建数值类型的格式化
+
+| 字符 |      说明（格式）      |
+| :--: | :--------------------: |
+|  C   |          货币          |
+|  D   |         十进制         |
+|  E   |    科学计数法(指数)    |
+|  F   |    定点(fix-point)     |
+|  G   |    **常规（默认）**    |
+|  N   |          数字          |
+|  P   |         百分比         |
+|  R   | 往返行程（round-trip） |
+|  X   |        十六进制        |
+
 
 
 
