--- a/CLR via C#/Ⅳ-核心机制/20-异常和状态管理.md
+++ b/CLR via C#/Ⅳ-核心机制/20-异常和状态管理.md
@@ -1,4 +1,58 @@
 ## 异常和状态管理
 
+#### 定义异常
+
 > 异常是指成员没有完成它的名称所宣称的行动。
+
+####　异常处理机制
+
+###### `try`
+
+> 如果在一个 try 块中执行多个可能抛出同一个异常类型的操作，但不同的操作有不同的异常恢复措施，就应该将每个操作都放到它自己的 try 块中。
+
+* 如果代码需要执行一般性的资源清理操作，需要从异常中恢复，或者两者都需要。
+* 包含可能会抛出异常的代码。
+
+###### `catch`
+
+> 包含的是响应一个异常需要执行的代码。
+>
+> 一个 try 块可以关联 0 个或者多个 catch 块。
+>
+> Visual Studio 中调试 catch 块时，可在监视窗口中添加 `$exception` 来查看当前抛出的异常对象。
+
+* 处理异常
+  * 一旦 CLR 找到匹配的 catch 块，就会执行内层所有 finally 块中的代码。
+  * 然后执行匹配异常的那个 catch 块中的代码，在这里对异常的处理通常有：
+    * 重新抛出相同的异常，向调用堆栈高一层的代码通知该异常的发生；
+    * 抛出一个不同的异常，向调用堆栈高一层的代码提供更加丰富的异常信息；
+    * 让线程从 catch 块的底部退出_(fall out of the bottom of the catch block)_。
+
+###### `finally`
+
+> finally 块包含的是保证会执行的代码。一般在 finally 块中执行 try 块的行动所要求的资源清理操作。
+>
+> 它必须出现在 catch 块之后，并且一个 try 块最多只能够关联一个 finally 块。
+>
+> `Exception` 类型能捕捉 _CLS_ 和 _非CLS_异常(_System.Runtime.CompilerServices_)(CLR 2.0 以后)。
+
+#### `System.Exception`
+
+> CLR 允许抛出任何类型的实例，C#编译器只允许抛出 CLS 相容的异常。
+
+###### `StackTrace` 属性
+
+* 包含信息
+
+  * 一个异常抛出时，CLR 在内部记录 throw 指令的位置(抛出位置)。一个 catch 块捕捉到该异常时，CLR 记录捕捉位置。
+
+    在 catch 块内访问被抛出的异常对象的 `StackTrace` 属性，负责实现该属性的代码会调用 CLR 内部的代码。
+
+    后者创建一个字符串来支持**从异常抛出位置到异常捕捉位置**的所有方法。
+
+  * 抛出异常时，CLR 会重置异常起点；也就是说，CLR 只记录最新的异常对象的位置。
+
+* 完整堆栈跟踪。
+
+  * `StackTrace` 属性返回的字符串不包含调用堆栈中比接受异常对象的那个 catch 块高的方法。
 
