--- a/CLR via C#/Ⅳ-核心机制/20-异常和状态管理.md
+++ b/CLR via C#/Ⅳ-核心机制/20-异常和状态管理.md
@@ -4,6 +4,8 @@
 
 > 异常是指成员没有完成它的名称所宣称的行动。
 
+
+
 ####　异常处理机制
 
 ###### `try`
@@ -36,6 +38,8 @@
 >
 > `Exception` 类型能捕捉 _CLS_ 和 _非CLS_异常(_System.Runtime.CompilerServices_)(CLR 2.0 以后)。
 
+
+
 #### `System.Exception`
 
 > CLR 允许抛出任何类型的实例，C#编译器只允许抛出 CLS 相容的异常。
@@ -54,5 +58,81 @@
 
 * 完整堆栈跟踪。
 
-  * `StackTrace` 属性返回的字符串不包含调用堆栈中比接受异常对象的那个 catch 块高的方法。
+  * `StackTrace` 属性返回的字符串不包含调用堆栈中比接受异常对象的那个 catch 块高的方法。要获得从线程起始处到异常处理程序_(catch)_之间的完整堆栈跟踪，需要使用 `System.Diagnostics.StackTrace` 类型。
+  
+  
+
+#### 抛出异常
+
+* 抛出异常时要考虑两个问题：
+
+  * 抛出什么 Exception 派生类型。
+    * 要考虑调用栈中位于高出的代码，要知道那些代码如何判断一个方法失败从而执行得体的恢复代码。
+  * 向异常类型的构造器传递什么字符串信息。
+
+  
+
+#### 定义自己的异常类
+
+> 从 `Exception` 派生的所有类型都应该时**可序列化**的。
+
+
+
+#### 设计规范和最佳实践
+
+###### 善用 `finally` 块。
+
+>  应该先用 `finally` 块清理那些已成功启动的操作，再返回至调用者或者执行 `finally` 块之后的代码。另外，还经常利用 `finally` 块显式释放对象以避免资源泄漏。
+
+* 自动生成 `try/finally` 块的情况：
+  * 只要使用了 `lock`、`using` 和 `foreach` 语句，C# 编译器就会自动生成 `try/finally` 块。
+  * 重写类的析构器_( Finalize 方法)_ 时，C# 编译器也会自动生成 `try/finally` 块。
+
+###### 不要什么都捕捉。
+
+> 捕捉异常表明你预见到该异常，理解它为什么发生，并知道如何处理它。
+>
+> 换句话说，是在为应用程序定义一个**策略**。
+
+> 不能完成任务的一个方法检测到对象状态已经损坏，而且状态无法恢复。不应抛出异常，应调用 `System.Environment` 的 `FailFast()` 方法强迫进程终止。
+
+* 如果类型时类库的一部分，那么任何情况下都绝对不允许捕捉并“吞噬”_(自己搞定异常，并当它没有发生)_所有异常。
+* 如果要在 `catch` 块中捕捉 `System.Exception` 并执行一些代码，要在 `catch` 块的末尾**重新抛出异常**。( VS 的代码之分析工具_( FxCopCmd.exe )_) 会标记包含 `catch(Exception)` 块的所有代码，除非块中有 `throw` 语句。
+* 可以在一个线程中捕捉异常，在另一个线程中重新抛出异常。为此提供支持的是**异步编程模型**。
+
+###### 得体的从异常中恢复
+
+* 有时，调用方法时已预料到它可能抛出某些异常。可以写一些代码，允许应用程序从一场中得体地回复并继续运行。
+* 捕捉具体异常时，应充分掌握在什么时候会抛出异常，并知道从捕捉的异常类型派生出了哪些具体类型。不要捕捉并处理 System.Exception，除非你会重新抛出。
+
+###### 发生不可恢复的异常时回滚部分完成的操作-维持状态
+
+* 为了正确回滚已部分完成的操作，代码应捕捉所有异常，并在处理完成后重新抛出。
+
+###### 隐藏实现细节来维系协定
+
+* 有时，需要捕捉一个异常并重新抛出不同的异常。这样做唯一的原因时维系方法的**协定**。
+
+* 抛出的新异常应该是一个具体异常，不能是其他异常类型的基类。
+
+* 如果捕捉一个异常并抛出新异常，目的是在异常类中添加额外的数据或上下文，可以使用:
+
+  * ```C#
+    catch(IOException e){
+        e.Data.Add("FileName", fileName);
+        throw;
+    }
+    ```
+
+
+
+#### 未处理的异常
+
+
+
+
+
+
+
+
 
