异常和状态管理

--- a/CLR via C#/Ⅳ-核心机制/20-异常和状态管理.md
+++ b/CLR via C#/Ⅳ-核心机制/20-异常和状态管理.md
@@ -123,12 +123,68 @@
         throw;
     }
     ```
+    
+  * 好的应用：如果构造器抛出异常，并且该异常未在构造器中捕捉，CLR 会在内部捕捉该异常，并改为抛出 `TypeInitializationException`。
+  
+  * 坏的应用：通过反射调用方法时，CLR 内部捕捉方法抛出的任何异常，都被转换成 `TargetInvocationException` 。使用 `dynamic` 来调用成员，编译器就不会这样处理，而是正常的在调用栈上向上传递。这是使用 `dynamic` 来代替反射的一个很好的理由。
 
 
 
 #### 未处理的异常
 
+> 异常抛出时，CLR 在调用栈中向上查找与抛出的异常对象的类型匹配的 catch 块。没有任何 catch 块匹配抛出的异常类型，就发生一个**未处理的异常**。
+>
+> CLR 检测到进程中的任何线程有未处理的异常，都会终止进程。WIndows 会向事件日志写一条记录。
 
+> 类库开发人员用不着去想未处理的异常。
+
+
+
+#### 异常处理的性能问题
+
+* 和收益相比，异常处理所造成的额外性能开销大于对性能的影响。
+* 可使用 Windows 自带的 `性能监视器` 和 随同 .Net Framework 安装的与异常有关的计数器。
+* 首先应建立一个最佳的对象模型，只有用户因为抛出异常而对性能不满意时，才在类型中添加 `TryXxx` 方法。
+
+
+
+#### 约束执行区域(CER)
+
+> `CER` 是必须对错误有适应力的代码。
+
+* `PrepareConstrainedRegions()` 是一个特别的方法。
+  * JIT 编译器如果发现在一个 try 块之前调用了这个方法，就会提前编译与 try 关联的 catch 和 finally 块中的代码。
+  * JIT 编译器会加载任何程序集，创建任何类型对象，调用任何静态构造器，并对任何方法进行 JIT 编译。如果任何操作造成异常，会在线程进入 try 块之前发生。
+  * JIT 编译器提前准备方法时，还会遍历整个调用图，提前准备被调用的方法，前提是这些方法应用了 `ReliabilityContractAttribute`，而且向这个特性实例的构造器传递的是 `Consistency.WillNotCorruptState` 或 `Consistency.MayCorruptInstance` 枚举成员。
+  * 再通过 `PrepareConstrainedRegions` 调用来保护的一个 catch 或 finally 块中，请确保只调用根据刚才的描述设置了 `ReliabilityContractAttribute` 的方法。
+* 如何保证方法得以执行：
+  * `RuntimeHelper.ExecuteCodeWithGuaranteedCleanUp()`
+    * 在资源保证得到清理的前提下才执行代码。
+  * `CriticalFinalizeObject`
+
+
+
+#### 代码协定
+
+> **代码协定_(code contract)_** 提供了直接在代码中声明代码设计决策的一种方式。
+>
+> 协定不能在新版本中变得更严格，否则会破坏兼容性。
+
+* 采取形式：
+  * 前条件
+    * 一半用于对实参进行验证。
+  * 后条件
+    * 方法因为一次普通的返回或抛出异常而终止时，对状态进行验证。
+  * 对象不变性_(Object Invariant)_
+    * 在对象的整个生命期内，确保对象的字段的良好状态。
+
+  > 前条件、后条件、对象不变性中引用的任何成员都一定不能有副作用(改变对象的状态)。
+  >
+  > 前条件测试中引用的所有成员的可访问性都至少要和前条件的方法一样。
+  >
+  > 涉及继承时，派生类型不能重写并更改基类型中定义的虚成员的前条件。
+
+* 核心是**静态类**：`System.Diagnostics.Contracts.Contract`
 
 
 
