托管堆和垃圾回收

--- a/CLR via C#/Ⅳ-核心机制/21-托管堆和垃圾回收.md
+++ b/CLR via C#/Ⅳ-核心机制/21-托管堆和垃圾回收.md
@@ -97,3 +97,137 @@
 
 ###### 大对象
 
+> CLR 将对象分为大对象和小对象，目前认为 **85000** 字节以上的对象是大对象。
+
+* CLR 以不同方式对待大小对象
+  * 大对象不是在小对象的地址空间分配，而是在进程地址空间的其他地方分配。
+  * 目前版本的 GC 不压缩大对象，因为在内存中移动他们代价过高。这可能在进程中的大对象之间造成地址空间碎片化，以至于抛出 OutOfMemoryException。CLR 可能在未来的版本中压缩大对象。
+  * 大对象总是第 **2** 代。所以只能为需要长时间存活的资源创建大对象。否则会造成第 2 代被频繁的回收，损害性能。
+  * 大对象一般是大字符串_(XML、JSON)_或者用于 I/O 操作的字节数组_(从文件或网络将字节读入缓存区以便处理等)_。
+
+###### 垃圾回收模式
+
+> CLR 启动时会选择一个 GC 模式，在进程终止前该模式不会改变。
+
+* 有两个基本 GC 模式：
+  * 工作站_(默认)_
+    * 该模式针对**客户端**程序优化 GC，延时很低，应用程序线程挂起时间很短。GC 假定机器上运行的其他应用程序都不会消耗太多 CPU 资源。
+  * 服务器
+    * 该模式针对**服务器**程序优化GC，被优化的主要是**吞吐量**和**资源利用**。GC 假定机器上没有运行其他应用程序并且所有的 CPU 都可用来辅助完成 GC。
+    * 该模式造成托管堆被拆分成几个区域_(section)_，每个 CPU 负责一个，垃圾回收时，垃圾回收器在每个 CPU 上都运行一个特殊线程并发执行回收。对于工作者线程_(worker thread)_ 行为一直的服务器应用程序，并发回收能很好的执行。要求多 CPU。
+
+> 除了这两种模式，GC 还支持两种子模式：**并发_(默认)_** 或 **非并发**。
+
+* 配置 GC 模式
+
+  * GC 模式是针对进程的，进程运行期间不能更改，但是可以使用 `GCSettings` 类的 `GCLatencyMode` 属性堆垃圾回收进行某种成都的控制。
+
+    | 符号名称                               | 说明                                                         |
+    | -------------------------------------- | ------------------------------------------------------------ |
+    | Batch (`服务器` GC 模式的默认值)       | 关闭并发 GC。                                                |
+    | Interactive (`工作站` GC 模式的默认值) | 打开并发 GC。                                                |
+    | LowLatency                             | 在短期的、时间敏感的操作中（比如动画绘制）使用这个延迟模式。这些操作不适合对第 **2** 代进行回收。 |
+    | SustainedLowLatency                    | 使用这种延迟模式，应用程序的大多数操作都不会发生长的 GC 暂停。只要有足够的内存，他将禁止所有会造成阻塞的第 **2** 代回收动作。事实上，这种应用程序（股票软件等）的用户应考虑安装更多的 RAM 来防止发生长的 GC 暂停。 |
+
+###### 强制垃圾回收
+
+* 大多数时候都要避免调用 `GC.Collect()`，最好让垃圾回收器自行斟酌执行。
+* 发生了某个非重复性事件，并导致大量旧对象死亡，考虑手动调用一次 `GC.Collect()`。
+* 在应用程序初始化完成之后或者在用户保存了一个数据文件之后，可强制执行一次对所有代的垃圾税后。
+
+* 如果对包括第 2 代在内的对象执行完全的垃圾回收，花费时间可能过长，可以调用 `GC.RegisterForFullGCNotification()` 方法，应用程序会在垃圾回收器要执行完全回收时收到通知，然后，应用程序可调用 `GC.Collect()`，再更恰当的时间进行垃圾回收。
+
+###### 监视应用程序的内存使用
+
+> GC 类提供了几个静态方法，可调用它们来查看某一代发生了多少次垃圾回收，或者托管堆中的对象当前使用了多少内存。
+
+```C#
+Int32 CollectionCount(Int32 generation);
+Int64 GetTotalMemory(Boolean forceFullCollection);
+```
+
+* 监视软件：
+  * **性能监视器_(perfMon.exe)_**。
+    * Windows 自带，为 CLR 的操作提供大量实时统计数据。
+  * **PerfView**。
+    * 分析内存和应用程序的性能，能收集 `Windows 事件跟踪(Event Tracing for Windows, ETW)` 日志并处理它们。
+  * **SOS Debugging Extension_(SOS.dll)_**.
+    * 对于内存问题和其它 CLR 问题的调试颇有帮助。
+    * 允许检查进程中为托管堆分配了多少内存。
+    * 显示在终结队列中登记终结的所有对象。
+    * 显示每个 AppDomain 或整个进程的 GCHandle 表中的记录项。
+    * 显示是什么_根_ 保持对象在堆中存活。
+
+
+
+#### 使用需要特殊清理的类型
+
+> 大多数类型有内存就能正常工作，但有的类型除了内存还需要本机资源。
+
+> 包含本机资源的类型被 GC 时，GC 会回收对象在托管堆中使用的内存，但这样会造成本机资源的泄露（GC 对它一无所知）。
+>
+> 所以，CLR 提供了 **终结_(finalization)_** 的机制。
+
+* **Finalization**
+
+  * **允许对象在被判定为垃圾后，但在对象内存被回收之前执行一些代码。**
+* 任何包含了本机资源（文件、网络连接、套接字、互斥体）的类型都支持 Finalization。
+  
+  * C# 要求在类名前添加 **`~`** 符号来定义 Finalize 方法。
+* CLR 用一种特殊的、高优先级的专用线程调用 `Finalize()` 方法来避免死锁。
+  
+  * 如果 `Finalize()` 方法抛出异常，则进程终止，没办法捕捉。
+* **尽量避免使用：**
+  
+  * 被视为垃圾的对象在垃圾回收完毕后才调用 `Finalize()` 方法，所以这些对象的内存不是马上被回收，而是被提升到另一代，使对象活得比正常时间长，增大了内存耗用。
+    * 更糟的是，其字段引用的所有对象也会被提升，所以要尽量避免为引用类型的字段定义可终结对象。
+  * `Finalize()` 方法的执行时间是控制不了的，因为不知道什么时候 GC。
+    * CLR 不保证多个 `Finalize()` 方法的调用顺序，不要在方法中访问定义了 `Finalize()` 方法的其它类型的对象。
+  * 这些方法可能在内部访问已终结的对象，导致静态方法的行为变得无法预测。
+  
+* **SaleHandle 类**
+
+  > 建议不好重写 Object 的 Finalize 方法，而是使用 Microsoft 在 FCL 中提供的辅助类，这些辅助类重写了Finalize 方法并添加了一些特殊的 CLR "魔法"。
+  >
+  > 创建封装了本机资源的托管类型时，应该先从 `System.Runtime.InteropServices.SaleHandle` 这个特殊基类派生出一个类。
+
+  * `SaleHandle` 类有两点需要注意：
+    * SaleHandle 是抽象类，必须有另一个类从该类派生并重写受保护的构造器、抽象方法 `ReleaseHandle` 以及抽象属性 `IsInvalid` 的 get 访问器。
+    * 它派生自 `CriticalFinalizerObject`，后者在 `System.Runtime.COnstrainedExecution` 命名空间定义。CLR 以特殊方式对待它及其派生类，赋予这个类三个很酷的功能：
+      * 首次构造它的派生类型对象时，CLR 立即堆继承层次结构中的所有 Finalize 方法进行 JIT 编译。以保证对象被确定为垃圾后，肯定会得以释放。
+      * CLR 在调用非 `CriticalFinalizerObject` 派生类型的 Finalize 方法后，才调用 `CriticalFinalizerObject` 派生类型的 Finalize 方法。
+      * 如果 AppDomain 被一个宿主应用程序强行中断，CLR 将调用 `CriticalFinalizerObject` 派生类型的 Finalize 方法。宿主应用程序不再信任它内部的代码，确保本机资源得以释放。
+  * `SaleHandle` 类保证本机资源在垃圾回收时得以释放。有两个功能值得注意：
+    * `SaleHandle` 派生类将获得 CLR 的特殊对待。
+    * 防止有人利用潜在的安全漏洞。
+  * 在必须追求性能而可以忽略部分安全性的情况下，可以使用派生自 `CriticalHandle` 的类型。它和 `SaleHandle` 的区别是不提供 *引用计数器*。
+
+###### 使用包装了本机资源的类型
+
+* 类如果想允许调用者控制类所包装的本机资源的生存期，就必须实现如下所示的 `IDisposable` 接口。
+
+  ```C#
+  public interface IDisposable {
+      void Disposable();
+  }
+  ```
+
+* 如果类中定义的一个字段的类型实现了 `dispose` 模式，这个类本身也应该实现 `IDisposable` 接口。`Dispose()` 方法应 dispose 字段引用的对象。
+
+  > `Dispose()` 只是控制这个清理动作的发生时间。不会将托管对象从托管堆中删除，只有垃圾回收时，托管堆中的内存才会得以回收。
+  >
+  > 这意味着，即使 dispose 了托管对象过去用过的任何本机资源，也能在托管对象上调用方法。
+
+* 尽量不要显示的调用 `Dispose()`。如果要使用尽量放到 `finally` 块中。
+
+  * 垃圾回收系统的优势：
+    * 无内存泄漏。
+    * 无内存损坏。
+    * 无地址空间碎片化。
+    * 缩小的工作集。
+    * 同步。
+
+
+
+
+
