托管堆和垃圾回收

--- a/CLR via C#/Ⅳ-核心机制/21-托管堆和垃圾回收.md
+++ b/CLR via C#/Ⅳ-核心机制/21-托管堆和垃圾回收.md
@@ -227,7 +227,56 @@ Int64 GetTotalMemory(Boolean forceFullCollection);
     * 缩小的工作集。
     * 同步。
 
+###### GC 为本机资源提供的其他功能
 
+* 如果一个类要包装可能很大的本机资源，就应该提示垃圾回收器实际需要消耗多少内存。垃圾回收器内部会监视内存压力，压力变大时，就强制执行垃圾回收
 
+  ```C#
+  public static void AddMemoryPressure(Int64 bytesAllocated);
+  public static void RemoveMemoryPressure(Int64 bytesAllocated);
+  ```
 
+* 如果一个类要包装数量有限制的本机资源，就应该提示垃圾回收器实际要使用资源的多少个实例。该类的对象会在内部监视这个计数，计数太大就强制垃圾回收。命名空间 `System.Runtime.INteropServices` 提供了 `HandleCollector` 。
 
+###### 终结的内部工作原理
+
+> 表面上：创建对象，当它被回收时，它的 `Finalize()` 方法得以调用。
+
+> 只有重写了 Object 的 Finalize 方法，这个类型及其派生类型的对象才会被认为是_可终结_ 的。
+
+* 创建新对象时，如果对象的类型定义了 `Finalize()` 方法，那么在该类型的实例构造器被调用之前，会将指向该对象的指针放到一个**终结列表_(finalization list)_** 中。
+* 垃圾回收开始时，扫描终结列表以查找对这些对象的引用。找到一个引用后，该引用会从终结列表中移除，并附加到 `freachable(F-reachable)` 队列。队列中的每个引用都代表其 `Finalize()` 方法已准备好调用的一个对象。
+* 一个特殊的高优先级 CLR 线程专门调用 `Finalize()` 方法。
+  * 当垃圾回收器将对象的引用从终结列表有移至`freachable` 队列时，对象不再被认为是垃圾，不能回收它的内存。标记 `freachable` 对象时，将递归标记对象中的引用类型的字段所引用的对象；所有这些对象也必须复活以便在回收过程中存活。在这个过程中，一些原本被认为是垃圾的对象复活了。
+  * 然后垃圾回收其压缩可回收的内存，将复活的对象提升到较老的一代。
+  * 最后，特殊的终结线程清空 `freachable` 队列，执行每个对象的 `Finalize()` 方法。
+  * 下次对老一代进行垃圾回收时，发现已终结的对象成为了真正的垃圾，这些对象的内存会直接回收。
+  * 整个过程中，可中介对象需要执行两次垃圾回收才能释放它们占用的内存。实际应用中，由于对象可能被提升至另一代，所以可能不止两次。
+
+###### 手动监视和控制对象的生存期
+
+> CLR 为每个 AppDomain 都提供了一个 **GC 句柄表_(GC Handle  table)_**，允许应用程序监视或手动控制对象的生存期。这个表在 AppDomain 创建之初是空白的。
+
+* 表中的每个记录项都包含了以下两种信息：
+
+  * 对托管堆中的一个对象的引用。
+  * 指出如何监视或控制对象的标识_(flag)_ 。
+
+* 可调用 `System.Runtime.InteropServices.GCHandle` 的静态 `Alloc()` 方法并传递该对象的引用。
+
+* `GCHandleType` 类型的具体含义：
+
+  | 值                    | 说明                                                         |
+  | --------------------- | ------------------------------------------------------------ |
+  | Weak                  | 该标志允许监视对象的生存期。具体地说，可检测垃圾回收器在什么时候判定对象在应用程序中不可达。此时对象的 `Finalize()` 方法**可能执行**，也可能没有执行，对象可能还在内存中。 |
+  | WeakTrackResurrection | 该标志允许监视对象的生存期。具体地说，可检测垃圾回收器在什么时候判定对象在应用程序中不可达。此时对象的 `Finalize()` 方法（如果有的话）**已经执行**，对象的内存已经回收。 |
+  | Normal（默认）        | 该标志允许控制对象的生存期。告诉垃圾回收器，即使应用程序中没有变量（根）引用该对象，该对象也必须留在内存中。垃圾回收发生时，该对象的内存**可以压缩**。 |
+  | Pinned                | 该标志允许控制对象的生存期。告诉垃圾回收器，即使应用程序中没有变量（根）引用该对象，该对象也必须留在内存中。垃圾回收发生时，该对象的内存**不能压缩**。 |
+
+* **当垃圾回收发生时，垃圾回收器的行为：**
+
+  * 垃圾回收器标记所有可达的对象。然后，垃圾回收器扫描 GC 句柄表：所有 **Normal** 或 **Pinned** 对象都被看成是根，同时标记这些对象，包括这些对象通过它们的字段引用的对象。
+  * 垃圾回收器扫描 GC 句柄表，查找所有 **Weak** 记录项。如果一个 **Weak** 记录项引用了未标记的对象，该引用标识的就是不可达对象（垃圾），该记录项的引用之更改为 null。
+  * 垃圾回收器扫描终结列表。在列表中，对未标记对象的引用标识的是不可达对象，这些引用从中介列表移至 `freachable` 队列。这时，对象会被标记，因为对象又变成可达了。
+  * 垃圾回收器扫描 GC 句柄表，查找所有 **WeakTrackResurrection** 记录项。如果一个该记录项引用了未标记的对象（它现在由 freachable 队列中的记录项引用的），该引用标志的就是不可达对象（垃圾），该记录项的引用值更改为 null。
+  * 垃圾回收器对内存进行压缩，填补不可达对象留下的内存空洞（碎片整理），**Pinned** 对象不会压缩。
