--- a/CLR via C#/Ⅴ-线程处理/26-线程基础.md
+++ b/CLR via C#/Ⅴ-线程处理/26-线程基础.md
@@ -12,4 +12,6 @@
   * 线程内核对象_(thread kernel object)_
     * 每个线程都创建，包含一组对象线程进行描述的属性。还有**线程上下文_(thread context)_**。上下文是包含 CPU 寄存器集合的内存块。对于 x86，x64，ARM 架构的线程上下文分别占用 700，1200，350 字节的内存。
   * 线程环境块_(thread environment block, TEB)_
+    * TEB 是在用户模式中分配内存和初始化内存块，TEB 耗用一个内存页 _(4KB)_。
     * 
+
