--- a/ReadNote/CLR via C#/Ⅴ-线程处理/26-线程基础.md
+++ b/ReadNote/CLR via C#/Ⅴ-线程处理/26-线程基础.md
@@ -6,6 +6,11 @@
 >
 > 线程的职责是对 CPU 进行虚拟化。Windows 为每个进程都提供了该进程专用的线程。
 
+#### 使用线程的理由
+
+* 可响应性。
+* 性能。
+
 #### 线程开销
 
 * 线程有 **时间_(内存耗用)_** 和 **时间_(运行时的执行性能)_** 上的开销。每个线程都有以下要素：
@@ -28,7 +33,6 @@
     * Windows 的一个策略是：任何时候在进程中创建线程，都会调用进程中加载的所有托管 DLL 的 `DllMain()` 方法，并向该方法传递 DLL_THREAD_ATTACH 标志。
     * 类似的，任何时候线程终止，都会调用进程中所有非托管 DLL 的 `DllMain()` 方法，并向方法传递 DLL_THREAD_DETACH 标志。
     * 有的 DLL 需要获取这些通知，才能为进程中创建/销毁的每个线程执行特殊的初始化或(资源)清理操作。
-  
 * Windows 上线程的执行方式：
 
   * Windows 任何时刻只将一个线程分配给一个 CPU。那个线程能运行一个时间片（有时也称为_量_ 或_量程_，即_quantum_）的长度。时间片到期，Windows 就上下文切换到另一个线程。每次切换都要求 Windows 执行以下操作：
@@ -38,11 +42,67 @@
   * 上下文切换完成后，CPU 执行所选的线程，直到它的时间片到期。然后发生下次上下文切换。**上下文切换是净开销，应尽量避免**。
   * 进行垃圾回收时，CLR 必须挂起(暂停)所有线程，遍历它们的栈来查找根以便对堆中的对象进行标记，再次遍历它们的栈，再恢复所有线程。所以，**减少线程的数量**也会显著提升垃圾回收其的性能。
   * 每次调试遇到断点时，Windows 都会挂起正在调试的程序的所有线程，并在单步执行或者运行应用程序时恢复所有线程。所以，**线程越多，调试体验越差**。
-
 * 优缺点：
 
   * 优点：使 Windows 更健壮，响应更灵敏。增强应用程序的可伸缩性。
   * 缺点：要耗用大量内存，需要相当多的时间来创建、销毁和管理。Windows 在线程之间进行上下文切换，以及发生垃圾回收时，也会浪费不少时间。
 
-  
+#### 线程调度和优先级
+
+> Windows 被称为抢占式_(preemptive)_ 操作系统，必须使用算法判断在什么时候调度哪些线程多长时间。
+>
+> Windows 线程可在任何时间停止（被抢占）并调度另一个线程（不能保证自己的线程一直运行，你阻止不了其它线程的运行）。
+
+* Windows 的线程调度：
+  * 在一个时间片_(time-slice)_之后，Windows 检查现存的所有线程内核对象。在这些对象中，只有那些没有正在等待什么的线程才适合调度。Windows 选择一个可调度的线程内核对象，并上下文切换到它。
+  * Windows 实际记录了每个线程被上下文切换到的次数。可以使用 `Microsoft Spy++` 这样的工具查看。
+  * 然后，线程开始执行代码，并在其进程的地址空间处理数据。
+  * 又过了一个时间片之后，Windows 执行一次上下文切换。直到系统关闭为止。
+
+* 线程调度的优先级：
+
+  * 每个线程都分配了 0 到 31 的优先级。系统决定为 CPU 分配哪个线程时，首先检查优先级 31 的线程，并以一种轮流_(round-robin)_方式调度它们。
+
+  * 只要存在优先级 31 的线程，系统就永远不会将优先级 0~30 的任何线程分配给 CPU，这种情况成为**饥饿_(starvation)_**。
+
+  * 多处理器的机器 31 和 30 的线程可以同时运行。
+
+  * 如果一个优先级低的线程正在运行，这时有较高优先级的线程准备好运行，系统会立即挂起较低的线程，将 CPU 分配给较高优先级的线程。
+
+  * 系统启动时会创建_零页线程(zero page thread)_。优先级是 0，且是整个系统唯一优先级为 0 的。在没有其他线程需要"工作"时，零页线程将系统 RAM 的所有空闲也清零。
+
+  * `进程优先级类_(priority class)_` **横** 和 `相对线程优先级类` **纵** 和 `优先级` 的关系
+
+    |               | Idle | Below Normal | Normal | Above Normal | High | Realtime |
+    | :-----------: | :--: | :----------: | :----: | :----------: | :--: | :------: |
+    | Time-Critical |  15  |      15      |   15   |      15      |  15  |    31    |
+    |    Highest    |  6   |      8       |   10   |      12      |  15  |    26    |
+    | Above Normal  |  5   |      7       |   9    |      11      |  14  |    25    |
+    |    Normal     |  4   |      6       |   8    |      10      |  13  |    24    |
+    | Below Normal  |  3   |      5       |   7    |      9       |  12  |    23    |
+    |    Lowest     |  2   |      4       |   6    |      8       |  11  |    22    |
+    |     Idle      |  1   |      1       |   1    |      1       |  1   |    16    |
+
+    * 以内核模式运行的设备驱动程序才能获取 17 18 19 20 21 27 28 29 30 这些优先级。
+
+    > 如果需要执行长时间的计算限制任务，如编译代码、拼写检查、表格重新计算等，应降低线程的优先级。
+    >
+    > 如果要快速响应某个事件，运行短暂时间，再恢复为等待状态，则应提高线程的优先级。
+
+#### 前台线程和后台线程
+
+> CLR 将每个线程要么视为前台线程，要么视为后台线程。
+>
+> 程序中所有前台线程停止运行时，CLR 强制终止仍在运行的任何后台线程。这些后台线程直接终止，不抛异常。
+
+* 基本概念
+  * 在线程的生存期中，任何时候都可以从前台变成后台，也可以从后台变成前台。
+  * 通过 Thread 显示创建的都是前台线程。
+  * 线程池线程默认为后台线程。
+  * 由进入托管执行环境的本机_(native)_代码创建的任何线程都是后台线程。
+  * 尽量**避免**使用前台线程。
+
+
+
+
 
