--- a/ReadNote/CLR via C#/Ⅴ-线程处理/27-计算限制的异步操作.md
+++ b/ReadNote/CLR via C#/Ⅴ-线程处理/27-计算限制的异步操作.md
@@ -136,6 +136,7 @@
         
 
 * CancellationTokenSource	
+  
   * `ThrowIfCancellationRequested` 和 `IsCalcellationRequested` 的区别是如果已经取消，前者会抛出一个 OperationCanceledException 异常。
 
 ###### 任务完成时自动启动新任务
@@ -226,6 +227,77 @@ parent.Start();
 
 > 有时要创建一组共享相同配置的 Task 对象。为避免机械地将相同的参数传给每个 Task 的构造器，可创建一个任务工厂来封装通用的配置。
 
-* `TaskFactory`
-* 
+* `TaskFactory` `TaskFactory<TResult>`
+  * 创建上述类型时，要向构造器传递工厂创建的所有任务都具有的默认值（CancellationToken、TashScheduler、TaskCreationOptions、TaskContinuationOptions）。
 
+  ```C#
+  var cts = new CancellationTokenSource();
+  var tf = new TaskFactory<Int32>(
+      cts.Token,
+      TaskCreationOptions.AttachedToParent,
+      TaskContinuationOptions.ExecuteSynchronously,
+      TaskScheduler.Default);
+  // 每个Task对象都共享'tf'的设置
+  var childTasks = new[] {
+      tf.StartNew(() => Sum(cts.Token, 10000));
+      tf.StartNew(() => Sum(cts.Token, 10000));
+      tf.StartNew(() => Sum(cts.Token, Int32.MaxValue));
+  }
+  ```
+
+  * 无论前置任务如何完成，ContinueWhenAll 和 ContinueWhenAny 都会执行延续任务。调用这两个方法时，TaskContinuationOption 标志的以下属性是非法的：NotOnRanToCompletion、NotOnFaulted、NotOnCanceled。
+
+###### 任务调度器
+
+> **`TaskScheduler`** 对象负责执行被调度的任务，同时向 Visual Studio 调试器公开任务信息。
+
+* FCL 提供了两个派生自 TaskScheduler 的类型：
+  * 线程池任务调度器（thread pool task scheduler）（默认）。
+    * 默认情况下，所有应用程序都是线程池任务调度器。
+    * 可调用 TaskScheduler.Default 属性来获得对其的引用。
+  * 同步上下文任务调度器（synchronization context task scheduler）。
+    * 适合图形用户界面的应用程序。
+    * 可调用 TaskScheduler.FromCurrentSynchronizationContext() 方法来获得对其的引用。
+
+#### Parallel
+
+> 一些常见的编程情形可通过任务提升性能。为简化编程，静态 `System.Threading.Tasks.Parallel` 类封装了这些情形，它内部使用 Task 对象。
+
+```C#
+// 不要这样处理集合中的所有项
+for (Int32 i = 0; i < 1000; i++){
+    DoWork(i); // 一个线程顺序执行
+}
+// 使用Parallel，建议使用For，执行速度更快
+Parallel.For(0, 1000, i => DoWork(i)); // 线程池线程并行处理工作
+Parallel.ForEach(collection, item => DoWork(i));
+
+// 一个线程顺序执行多个方法
+Parallel.Invoke(
+	() => Method1();
+    () => Method2();
+    () => Method3());
+```
+
+* 使用 Parallel
+  * 调用 Parallel 的方法有一个重要前提：工作项必须能**并行执行**。	
+  * 另外要避免会修改任何共享数据的工作项，否则多个线程同时处理可能会损坏数据。解决这个问题一半是围绕数据访问添加线程同步锁。但这样一次就只能有一个线程访问数据，无法并行处理。
+* 注意事项
+  * Parallel 的所有方法都让调用线程参与处理。
+  * Parallel 的方法本身也有开销。
+    * 委托对象必须分配，而针对每个工作项都要调用一次这些委托。
+    * 如果有大量可由多个线程处理的工作项，那么也许能获得性能的提升。另外，如果每一项都涉及大量工作，那么通过委托来调用所产生的性能损失可以忽略不计。
+    * 如果只为了很少的几个工作项，或者为处理非常快的工作项使用 Parallel 的方法，就会得不偿失，反而降低性能。
+* `For` 和 `ForEach` 方法有一些重载版本允许传递 3 个委托：
+  * 任务局部初始化委托（localInit）
+    * 为参与工作的每个任务都调用一次该委托，这个委托是在任务被要求处理一个工作项之前调用的。
+  * 主体委托（body）
+    * 为参与工作的每个线程所处理的每一项都调用一次该委托。
+  * 任务局部终结委托（localFinally）
+    * 为参与工作的每一个任务都调用一次该委托。这个委托是在任务处理好派发给它的所有工作项之后调用的。即使主体委托代码引发一个未处理的异常，也会调用它。
+
+#### 并行语言集成查询（PLINQ）
+
+> 使用 LINQ to Objects 时，只有一个线程顺利处理数据集合中的所有项，我们称之为顺序查询_(sequential query)_。要提高处理性能，可以使用并行LINQ_(Parallel LINQ)_。
+>
+> 
