:pencil2: fix typo

--- a/ReadNote/CLR via C#/Ⅱ-设计类型/05-基元类型、引用类型和值类型.md
+++ b/ReadNote/CLR via C#/Ⅱ-设计类型/05-基元类型、引用类型和值类型.md
@@ -74,12 +74,14 @@
             * 重载==和!=操作符。
 
 * **对象哈希码**
-    * 如果定义的对象重写了Equals方法，还应该重写GetHashCode方法。
-
+    
+* 如果定义的对象重写了Equals方法，还应该重写GetHashCode方法。
+    
 * **dynamic**基元类型
-    * 使用dynamic类型时，编译器回生产payload代码，在运行时根据dynamic的类型来决定具体执行的操作。
+    
+    * 使用dynamic类型时，编译器会生产payload代码，在运行时根据dynamic的类型来决定具体执行的操作。
     * 所有的表达式都可以隐式转换成dynamic，也可以从dynaimic转换成其他类型。
-    * 加载这些程序集(microsoft.csharp.dll等)和内存消耗会造成性能影响。所以如果知识一两个地方需要动态行为，传统做法(反射、手动类型转换)或许更高效。
+    * 加载这些程序集(microsoft.csharp.dll等)和内存消耗会造成性能影响。所以如果只是一两个地方需要动态行为，传统做法(反射、手动类型转换)或许更高效。
     
     
 ---
@@ -92,13 +94,13 @@
 | byte  | System.Byte   | 是 | 无符号8位值 |
 | short | System.Int16 | 是 | 有符号16位值 |
 | ushort | System.UInt16 | 否 | 无符号16位值 |
-| int | System.Int32 | 是 | 有符号32位值 | 
-| uint | System.Uint32 | 否 | 无符号32位值 | 
+| int | System.Int32 | 是 | 有符号32位值 |
+| uint | System.Uint32 | 否 | 无符号32位值 |
 | long | System.Int64 | 是 | 有符号64位值 |
 | ulong | System.UInt64 | 否 | 无符号64位值 |
 | char | System.Char | 是 | 16位Unicode字符 |
 | float | System.Single | 是 | IEEE 32位浮点值 |
-| double | System.Double | 是 | IEEE 64位浮点值 | 
+| double | System.Double | 是 | IEEE 64位浮点值 |
 | bool | System.Boolean | 是 | true/false值 |
 | decimal | System.Decimal | 是 | 128位高精度浮点值，常用于不容许舍入误差的金融计算。128位中，1位是符号，98位是之本身($N$)，8位是比例因子($k$),decimal实际值是$±N✖10$，其中 $-18<=k<=0$,其余位没有使用 。|
 | string | System.String | 是 | 字符数组 |
