:memo: PLINQ & Timer

--- a/ReadNote/CLR via C#/Ⅴ-线程处理/27-计算限制的异步操作.md
+++ b/ReadNote/CLR via C#/Ⅴ-线程处理/27-计算限制的异步操作.md
@@ -300,4 +300,110 @@ Parallel.Invoke(
 
 > 使用 LINQ to Objects 时，只有一个线程顺利处理数据集合中的所有项，我们称之为顺序查询_(sequential query)_。要提高处理性能，可以使用并行LINQ_(Parallel LINQ)_。
 >
-> 
+> 它将顺序查询转换成并行查询，在内部使用 Task（排队给默认 TaskScheduler），将集合中的数据项的处理工作分散到多个 CPU 上，以便并发处理多个数据项。
+>
+> 和 Parallel 的方法类似，要同时处理大量项，或者每一项的处理过程都是一个耗时的计算限制的操作，那么能从并行 LINQ 获得最大的收益。
+
+* **System.Linq.ParallelEnumerable**
+
+  * 实现了 PLINQ 的所有功能。
+  * 要调用 LINQ 方法的并行版本，必须将自己的顺序查询（基于 IEnumerable/IEnumerable<T>）转换成并行查询（基于 ParallelQuery/ParallelQuery<T>），使用 ParallelEnumerable 的 `AsParallel` 拓展方法来实现。
+  * 也可以通过 ParallelEnumerable 的 `AsSequential` 方法将并行操作切换回顺序操作。
+
+* 使用 **`ForAll()`** 来遍历查询结果，它允许多个线程同时处理结果。
+
+  * 内部不要使用 Console.WriteLine(); 因为它内部会对线程进行同步，确保每次只有一个线程能访问控制台窗口。
+
+* 由于 PLINQ 用多个线程处理数据项，所以数据项被并发处理，结果被无序的返回。
+
+  * 如果要保持数据项的顺序，可调用 ParallelEnumerable 的 `AsOrdered()` 方法。
+  * 调用这个方法时，线程会**成组**处理数据项，然后，这些组被合并回去，同时保持顺序。这样会损害性能。
+  * 这些操作符生成不排序的操作：Distinct、Except、Intersect、Union、Join、GroupBy、GroupJoin、ToLookup。之后调用 `AsOrdered()` 方法来进行强制排序。
+  * 这些操作符生成排序的操作：O人derBy、OrderByDescending、ThenBy、ThenByDescending。之后调用 `AsUnordered()` 方法来恢复不排序的结果。
+
+* 额外的一些方法
+
+  * `WithCancellation()`
+
+    * 允许传递一个 CancellationToken，使查询处理能提前停止。
+
+  * `WithDegreeOfParallelism()`
+
+    * 指定最多允许多少个线程处理查询。默认每个内核用一个线程执行查询。
+    * 可传递小于可用内核数的数字。
+    * 如果查询要执行同步I/O操作，可传递比内核数大的数字，因为线程会在这些操作期间阻塞。（不要在服务器应用程序中执行同步I/O操作）
+
+  * `WithExecutionMode()`
+
+    * 强迫查询以并行方式处理。
+
+    ```C#
+    public enum ParallelExecutionMode {
+        Default = 0,			// 让并行 LINQ 决定处理查询的最佳方式
+        ForceParallelism = 1	// 强迫查询以其并行方式处理
+    }
+    ```
+
+    
+
+  * `WithMergeOptions()`
+
+    * 控制执行结果的缓冲和合并方式。
+    * 向它传递一个 ParallelMergeOptions 标志：
+
+    ```C#
+    public enum ParallelMergeOptions {
+        Default = 0,		// 目前和 AutoBuffered 一样。最省内存，速度慢。
+        NotBuffered = 1,	// 结果一旦就绪就开始处理。
+        AutoBuffered = 2,	// 每个线程在处理前缓冲一些结果
+        FullyBuffered = 3	// 每个线程在处理前缓冲所有结果。消费较多内存，速度快。
+    }
+    ```
+
+    ```
+    PLINQ 分析一个查询，然后决定如何更好的处理它。有时候，顺序处理一个查询可以获得更好的性能，尤其是在使用以下任何操作时：Concat、ElementAt(OrDefault)、First(OrDefault)、Last(OrDefault)、Skip(While)、Take(While)、Zip。使用 Select(Many) 或 Where 的重载版本，并向你的 selector 或 predicate 委托传递一个位置索引时也是如此。
+    ```
+
+#### 执行定时计算限制操作
+
+> System.Threading 命名空间定义了一个 Timer 类，可用它让一个线程池线程定时调用一个方法。
+>
+> 构造 Timer 类的实例相当于告诉线程池：在将来的某个时间（由你指定）回调你的一个方法。
+>
+> 定时操作可使用 Task 的静态 Delay 方法，和 async、await 关键字。
+
+* 执行方式
+  * 线程池为所有 Timer 对象只是用一个线程。这个线程知道下一个 Timer 对象在什么时候到期（计时器还有多久触发）。下一个 Timer 对象到期时，线程就被唤醒，在内部调用 ThreadPool 的 QueueUserWorkItem，将一个工作项添加到线程池的队列中，是你的方法得到调用。
+  * 如果回调方法的执行时间很长，计时器可能在上个回调还没有完成的时候再次触发。这可能造成多个线程池线程同时执行你的回调方法。为解决这个问题，建议是：构造 Timer 时，为 _period_ 参数指定 `Timout.Infinite`。这样计时器就值触发一次。然后在你的回调方法中，调用 Change 方法来指定一个新的 _dueTime_，并再次为 _period_ 参数指定 Timeout.Infinite。
+
+* `Dispose()`
+  * 允许完全取消计时器，并可在当时处于 pending 状态的所有回调完成之后，向 notifyObject 参数标识的内核对象发出信号。
+
+```
+Timer 对象被垃圾回收时，它的终结代码告诉线程池取消计时器，使它不在触发。
+所以，使用 Timer 对象时，要确定有一个变量在保持 Timer 对象的存货。
+```
+
+###### FCL 中提供的几个计时器的区别：
+
+* System.Threading 的 Timer 类
+
+  * 要在一个线程池上执行定时的（周期性发生的）后台任务，它是最好的计时器。
+
+* System.Timer 的 Timer 类
+
+  * 本质上是 System.Threading.Timer 的包装类。
+  * 允许在 VS 中将这些计时器对象放到设计平面上。
+  * 它还公开了属性和事件，更容易使用。
+  * 不建议使用。
+
+* System.Windows.Forms 的 Timer 类
+
+* System.Windows.Threading 的 DispatcherTimer 类
+
+* Windows.UI.Xaml 的 DispatcherTimer 类
+
+  * 相等于 System.Windows.Forms.Timer 类在 Windows Store 中的等价物。
+
+  
+
